# Edurise-backend

./: .env.example  .gitignore  Dockerfile  backup.sh  bot.py  deploy.yml  docker-compose.yml  entrypoint.sh  index.html  pyproject.toml  requirements.txt
Employee/: urls.py  views.py
accounts/: admin.py  models.py  urls.py  verify.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_users_role.py  0002_users_created_by_admin.py  0003_alter_users_birth_day.py  0004_alter_users_role.py
adm/: forms.py  urls.py  views.py
api/: admin.py  serializers.py  urls.py  views.py
app/: asgi.py  settings.py  urls.py  wsgi.py
app/conf/: __init__.py  unfold.py
certificate/: admin.py  models.py  urls.py  views.py
certificate/migrations/: 0001_initial.py
courses/: admin.py  apps.py  mixins.py  models.py  urls.py  views.py
dashboard/: urls.py  views.py
education/: admin.py  models.py  urls.py  views.py
fast_certificate/: admin.py  apps.py  models.py  urls.py  views.py
forms/: user.py
groups/: admin.py  models.py  urls.py  views.py
helpers/: Json.py  certificate.py  chek.py  context.py  helpers.py  roles.py  ucell.py  url.py
middlewares/: role.py
payments/: admin.py  models.py  urls.py  views.py
registration/: api.py  models.py  serializers.py  urls.py  views.py
rooms/: admin.py  models.py  urls.py  views.py
salary/: admin.py  models.py
sessions/: 998936402078.db
settings/: admin.py  forms.py  models.py  urls.py  views.py
students/: admin.py  models.py  urls.py  views.py
teachers/: admin.py  forms.py  models.py  urls.py  views.py
(+104 files in other folders)
