[tool.poetry]
name = "Edurise"
version = "0.1.0"
description = ""
authors = ["A'zamov Samandar <JscorpTech@gmail.com>"]
readme = "README.md"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.6.0"
certifi = "2023.5.7"
charset-normalizer = "3.1.0"
colorama = "0.4.6"
crispy-bootstrap5 = "0.7"
django = "4.2.1"
django-cors-headers = "4.1.0"
django-crispy-forms = "2.0"
djangorestframework = "3.14.0"
et-xmlfile = "1.1.0"
gunicorn = "21.2.0"
idna = "3.4"
jinja2 = "3.1.2"
markupsafe = "2.1.3"
numpy = "1.24.3"
openpyxl = "3.1.2"
packaging = "23.2"
pandas = "2.0.2"
pillow = "9.5.0"
psycopg2-binary = "2.9.6"
pypng = "0.20220715.0"
python-dateutil = "2.8.2"
pytz = "2023.3"
qrcode = "7.4.2"
requests = "2.31.0"
six = "1.16.0"
sqlparse = "0.4.4"
typing-extensions = "4.6.3"
tzdata = "2023.3"
urllib3 = "2.0.3"
django-unfold = "^0.40.0"
uvicorn = "^0.32.0"
django-storages = "^1.14.4"
boto3 = "^1.35.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
